# JOCK

./: JOCKReport.csv  database.py  db.txt  designers.txt  designers2.txt  designerscrape.py  ipython.html  jocktrans.py  main.py  pyproject.toml  scrape.py
