[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "powerlessyearlyvideogame"
version = "0.1.0"
[tool.poetry.dependencies]
bs4 = "^0.0.1"
googletrans = "^2.4"
html5lib = "^1.0"
python = "^3.7"
[tool.poetry.dev-dependencies]
